# Vision-OPP

./: CMakeLists.txt  README.md  camera_test.cpp  check_opencv  check_opencv.cpp
filter/: DummyFilter.hpp
output/: WindowSink.cpp
source/: CameraSource.cpp
src/: main.cpp
src/app/: VisionApp.cpp  VisionApp.hpp
src/background/: IBackgroundProvider.hpp  ParticlesBackground.cpp  ParticlesBackground.hpp  VideoLoopBackground.cpp  VideoLoopBackground.hpp
src/filter/: BackgroundCompositeFilter.cpp  BackgroundCompositeFilter.hpp  CartoonFilter.cpp  CartoonFilter.hpp  DummyFilter.cpp  EdgeFilter.cpp  EdgeFilter.hpp  FilterFactory.cpp  FilterFactory.hpp  GlassesFilter.cpp  GlassesFilter.hpp  IFilter.hpp  IHasUI.hpp  MirrorFilter.cpp  MirrorFilter.hpp  NegativeFilter.cpp  NegativeFilter.hpp  PixelFilter.cpp  PixelFilter.hpp  PortraitBlurFilter.cpp  PortraitBlurFilter.hpp  PseudoColorFilter.cpp  PseudoColorFilter.hpp
src/matting/: DnnMatteEstimator.cpp  DnnMatteEstimator.hpp
src/output/: IOutputSink.hpp  WindowSink.hpp
src/pipeline/: Pipeline.cpp  Pipeline.hpp
src/source/: CameraSource.cpp  CameraSource.hpp  IFrameSource.hpp
